update configure script and stuff
also update bootstrap script, simplify gitignore, and apply patch that
MacPorts applies

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,34 @@
+*DS_Store*
 *.aux
+*.cache
 *.dvi
 *.log
 *.o
+*.status
+*~
 .deps
 Makefile
 Makefile.in
 aclocal.m4
+ar-lib
 autoconf.h
 autoconf.h.in
-autoconf.h.in~
 autom4te*
 cfftot1/cfftot1
-config.cache
-config.log
-config.status
+compile
+config.*
 configure
+configure.scan
 depcomp
 glyphtounicode.tex
 install-sh
-libefont/libefont.a
-liblcdf/liblcdf.a
+lib*/*.a
 missing
 mmafm/mmafm
 mmpfb/mmpfb
 otfinfo/otfinfo
 otftotfm/otftotfm
 stamp-h*
-stamp-h.in
 t1dotlessj/t1dotlessj
 t1lint/t1lint
 t1rawafm/t1rawafm
