--- a/configure.ac
+++ b/configure.ac
@@ -16,11 +16,12 @@ AM_MAINTAINER_MODE
 AM_PROG_INSTALL_STRIP
 
 if test "x${CC}" = "x"; then
-	test -z "${CC}"
-	AC_PROG_CC
+  test -z "${CC}" || unset CC
+  AC_PROG_CC
 else
-	test ! -z "${CC}" && export CC
-	AC_SUBST([CC])
+  test -n "${CC}" && export CC
+  AC_SUBST([CC])dnl
+  ## (just in case this branch gets left empty...)
 fi
 AC_PROG_CPP
 AC_PROG_CXX
@@ -29,19 +30,21 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 
 AC_ARG_ENABLE([warnings],
-  [AS_HELP_STRING([--enable-warnings], [compile with -W -Wall])],
-  [if test "$enableval" = yes; then
-    CFLAGS="$CFLAGS -W -Wall"; CXXFLAGS="$CXXFLAGS -W -Wall"
+  [AS_HELP_STRING([--enable-warnings],[compile with -Wall -Wextra])],
+  [if test "x${enableval}" = "xyes"; then
+    CFLAGS="${CFLAGS} -W -Wall"; CXXFLAGS="${CXXFLAGS} -Wall -Wextra"
   fi])
 
 AC_ARG_ENABLE([precondition-checking],
-  [AS_HELP_STRING([--enable-precondition-checking], [include precondition checking assertions])],
-  [if test "$enableval" = yes; then
-    AC_DEFINE([HAVE_PRECONDITION_CHECKING], [1], [Define to include precondition checking assertions.])
+  [AS_HELP_STRING([--enable-precondition-checking],
+                  [include precondition checking assertions])],
+  [if test "x${enableval}" = "xyes"; then
+    AC_DEFINE([HAVE_PRECONDITION_CHECKING],[1],
+              [Define to include precondition checking assertions.])
   fi])
 
-AN_MAKEVAR([AR],[AM_PROG_AR])
-AN_PROGRAM([ar],[AM_PROG_AR])
+AN_MAKEVAR([AR],[AM_PROG_AR])dnl
+AN_PROGRAM([ar],[AM_PROG_AR])dnl
 AM_PROG_AR
 
 AC_PROG_RANLIB
@@ -129,11 +132,11 @@ AC_HEADER_STDBOOL dnl# Calls AC_CHECK_HEADER_STDBOOL
 AC_HEADER_DIRENT
 AC_CHECK_HEADERS([ctype.h fcntl.h limits.h stddef.h sys/time.h sys/wait.h])
 if test "x${ac_cv_header_inttypes_h}" = "x"; then
-  test -z "${ac_cv_header_inttypes_h}"
+  test -z "${ac_cv_header_inttypes_h}" || unset ac_cv_header_inttypes_h
   AC_CHECK_HEADERS([inttypes.h])
 fi
 if test "x${ac_cv_header_unistd_h}" = "x"; then
-  test -z "${ac_cv_header_unistd_h}"
+  test -z "${ac_cv_header_unistd_h}" || unset ac_cv_header_unistd_h
   AC_CHECK_HEADERS([unistd.h])
 fi
 AC_LANG_POP
@@ -186,7 +189,7 @@ dnl#
 AC_LANG_PUSH([C])
 need_fixlibc=0
 AC_CHECK_FUNCS([strerror],[],[need_fixlibc=1])
-AC_SEARCH_LIBS([strerror],[cposix])
+AC_SEARCH_LIBS([strerror],[cposix])dnl
 
 AC_CHECK_HEADERS_ONCE([stdio.h])
 AC_CACHE_CHECK([for broken strtod],[ac_cv_broken_strtod],
@@ -207,8 +210,8 @@ AC_LANG_POP
 
 AC_LANG_PUSH([C++])
 AC_CHECK_DECLS([strnlen],[],[],[#include <string.h>])
-AC_CHECK_FUNCS([strnlen], [have_strnlen=1], [need_fixlibc=1])
-if test "x$have_strnlen" = x1; then
+AC_CHECK_FUNCS([strnlen],[have_strnlen=1],[need_fixlibc=1])
+if test "x${have_strnlen}" = "x1"; then
     AC_CACHE_CHECK([for broken strnlen],[ac_cv_broken_strnlen],
     [AC_RUN_IFELSE([AC_LANG_SOURCE([[#include <string.h>
 #include <stdio.h>
@@ -216,7 +219,7 @@ int main(int c, char **v) {
   char s[] = "01234567891";
   return strnlen(s, 10) == 10;
 }]])],[ac_cv_broken_strnlen=yes],[ac_cv_broken_strnlen=no],[ac_cv_broken_strnlen=no])])
-    if test "x$ac_cv_broken_strnlen" = xyes; then
+    if test "x${ac_cv_broken_strnlen}" = "xyes"; then
 	need_fixlibc=1
 	AC_DEFINE([HAVE_BROKEN_STRNLEN],[1],[Define if strnlen is broken.])
     fi
@@ -236,7 +239,7 @@ AC_CHECK_FUNCS([ctime ftruncate memchr memcpy memmove memset mkdir \
                 strrchr strstr strtol strtoul vsnprintf waitpid])
 AC_CHECK_FUNC([floor],[],[AC_CHECK_LIB([m],[floor])])
 AC_CHECK_FUNC([fabs],[],[AC_CHECK_LIB([m],[fabs])])
-AM_CONDITIONAL([FIXLIBC],[test x$need_fixlibc = x1])
+AM_CONDITIONAL([FIXLIBC],[test "x${need_fixlibc}" = "x1"])
 AC_LANG_POP
 
 AC_LANG_PUSH([C++])
@@ -279,13 +282,13 @@ Assuming "short" has 16 bits and "int" has 32 bits.
 fi
 
 AC_CHECK_TYPES([uintptr_t],[],[],
-[#if HAVE_INTTYPES_H
+[#if defined(HAVE_INTTYPES_H) && HAVE_INTTYPES_H
 # include <inttypes.h>
-#endif
-#if HAVE_SYS_TYPES_H
+#endif /* HAVE_INTTYPES_H */
+#if defined(HAVE_SYS_TYPES_H) && HAVE_SYS_TYPES_H
 # include <sys/types.h>
-#endif
-])
+#endif /* HAVE_SYS_TYPES_H */
+])dnl
 
 AC_CHECK_SIZEOF([void *])
 AC_CHECK_ALIGNOF([void *])
@@ -361,7 +364,7 @@ dnl#
 
 AC_LANG_PUSH([C++])
 AC_CACHE_CHECK([for addressable va_list type],
-    ac_cv_va_list_addr,
+    [ac_cv_va_list_addr],
     [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <stdarg.h>
 void f(va_list *) {
 }
@@ -374,7 +377,7 @@ void h(int a, ...) {
     g(val);
     va_end(val);
 }]],[[h(2, 3, 4);]])],[ac_cv_va_list_addr=yes],[ac_cv_va_list_addr=no])])
-if test "x$ac_cv_va_list_addr" = xyes; then
+if test "x${ac_cv_va_list_addr}" = "xyes"; then
     AC_DEFINE([HAVE_ADDRESSABLE_VA_LIST],[1],[Define if the va_list type is addressable.])
 fi
 AC_LANG_POP
@@ -383,12 +386,12 @@ dnl#
 dnl# select programs to be compiled and automatically run
 dnl#
 
-m4_include([m4/lcdf-typetools.m4])
+m4_include([m4/lcdf-typetools.m4])dnl
 
-SELECTED_SUBDIRS=
-m4_foreach_w([Kpse_Prog],[kpse_lcdf_typetools_progs],[test "x$enable_[]Kpse_Prog" = xno || SELECTED_SUBDIRS="$SELECTED_SUBDIRS Kpse_Prog"
+SELECTED_SUBDIRS=""
+m4_foreach_w([Kpse_Prog],[kpse_lcdf_typetools_progs],[test "x$enable_[]Kpse_Prog" = "xno" || SELECTED_SUBDIRS="${SELECTED_SUBDIRS} Kpse_Prog"
 ])
-AC_SUBST([SELECTED_SUBDIRS])
+AC_SUBST([SELECTED_SUBDIRS])dnl
 
 m4_foreach_w([Kpse_Opt],[kpse_otftotfm_auto_opts],[AS_IF([test "x$enable_auto_]Kpse_Opt[" != xno],
                   [AC_DEFINE([HAVE_AUTO_]AS_TR_CPP(Kpse_Opt), 1,
@@ -400,44 +403,62 @@ dnl# kpathsea
 dnl#
 
 AC_ARG_WITH([kpathsea],
-  [AS_HELP_STRING([--with-kpathsea=PREFIX],[Kpathsea is installed (under PREFIX)])],
-  [kpathsea=$withval],[kpathsea=])
+  [AS_HELP_STRING([--with-kpathsea=PREFIX],
+                  [Kpathsea is installed (under PREFIX)])],
+  [kpathsea=${withval}],[kpathsea=""])
 
-KPATHSEA_INCLUDES=
-KPATHSEA_LIBS=
-KPATHSEA_DEPEND=
+KPATHSEA_INCLUDES=""
+KPATHSEA_LIBS=""
+KPATHSEA_DEPEND=""
 
-if test "x$kpathsea" != xno; then
-    SAVE_CPPFLAGS="$CPPFLAGS"; SAVE_LDFLAGS="$LDFLAGS"
-    if test "x$kpathsea" != x -a "x$kpathsea" != xyes; then
-	KPATHSEA_INCLUDES="-I$kpathsea/include"
-	KPATHSEA_LIBS="-L$kpathsea/lib"
+if test "x${kpathsea}" != "xno"; then
+    SAVE_CPPFLAGS="${CPPFLAGS}"; SAVE_LDFLAGS="${LDFLAGS}"
+    if test "x${kpathsea}" != "x" -a "x${kpathsea}" != "xyes"; then
+	KPATHSEA_INCLUDES="-I${kpathsea}/include"
+	KPATHSEA_LIBS="-L${kpathsea}/lib"
     else
 	kpathsea=yes
     fi
 
     dnl# check for kpathsea/kpathsea.h
     if true; then
-	CPPFLAGS="$SAVE_CPPFLAGS $KPATHSEA_INCLUDES"
+	CPPFLAGS="${SAVE_CPPFLAGS} ${KPATHSEA_INCLUDES}"
 	AC_CHECK_HEADER([kpathsea/kpathsea.h],[kpse_header=yes], [kpse_header=no])
     fi
 
-    dnl# if not found and kpathsea prefix not set, check /usr/local
-    if test "x$kpse_header" != xyes -a "x$kpathsea" = xyes -a -r /usr/local/include/kpathsea/tex-file.h; then
-	KPATHSEA_INCLUDES="-I/usr/local/include"
-	KPATHSEA_LIBS="-L/usr/local/lib"
-	CPPFLAGS="$SAVE_CPPFLAGS $KPATHSEA_INCLUDES"
+    dnl# if not found and kpathsea prefix not set, check /usr/local,
+    dnl# and then some other places
+    if test "x${kpse_header}" != "xyes" -a "x${kpathsea}" = "xyes"; then
+	if test -r /usr/local/include/kpathsea/tex-file.h; then
+	    KPATHSEA_INCLUDES="-I/usr/local/include"
+	    KPATHSEA_LIBS="-L/usr/local/lib"
+	elif test -d "${prefix}" -a -r ${prefix}/include/kpathsea/tex-file.h; then
+	    KPATHSEA_INCLUDES="-I${prefix}/include"
+	    KPATHSEA_LIBS="-L${prefix}/lib"
+	elif test -d "${exec_prefix}" -a -r ${exec_prefix}/include/kpathsea/tex-file.h; then
+	    KPATHSEA_INCLUDES="-I${exec_prefix}/include"
+	    KPATHSEA_LIBS="-L${exec_prefix}/lib"
+	elif test -d "${includedir}" -a -r ${includedir}/kpathsea/tex-file.h -a -d "${libdir}"; then
+	    KPATHSEA_INCLUDES="-I${includedir}"
+	    KPATHSEA_LIBS="-L${libdir}"
+	elif test -d "${oldincludedir}" -a -r ${oldincludedir}/kpathsea/tex-file.h -a -d "${oldincludedir}/../lib"; then
+	    KPATHSEA_INCLUDES="-I${oldincludedir}"
+	    KPATHSEA_LIBS="-L${oldincludedir}/../lib"
+	else
+	    AC_MSG_WARN([unsure where to look for kpathsea])
+	fi
+	CPPFLAGS="${SAVE_CPPFLAGS} ${KPATHSEA_INCLUDES}"
 	AC_CHECK_HEADER([kpathsea/tex-file.h],[kpse_header=yes],[kpse_header=no])
     fi
 
     dnl# check for -lkpathsea
     if true; then
-	LDFLAGS="$SAVE_LDFLAGS $KPATHSEA_LIBS"
+	LDFLAGS="${SAVE_LDFLAGS} ${KPATHSEA_LIBS}"
 	AC_CHECK_LIB([kpathsea],[kpse_set_program_name],[kpse_library=yes],[kpse_library=no])
     fi
 
     dnl# bail out if not found
-    if test "x$kpse_header" != xyes -o "x$kpse_library" != xyes; then
+    if test "x${kpse_header}" != "xyes" -o "x${kpse_library}" != "xyes"; then
 	AC_MSG_ERROR([
 =========================================
 
@@ -452,12 +473,13 @@ using --without-kpathsea.
     dnl# OK, found
     AC_DEFINE([HAVE_KPATHSEA],[1],[Define if you want to use kpathsea.])
     if true; then
-	KPATHSEA_LIBS="$KPATHSEA_LIBS -lkpathsea"
+	KPATHSEA_LIBS="${KPATHSEA_LIBS} -lkpathsea"
     fi
 
     dnl# does it have opentype support?
     if false; then
-	AC_DEFINE([HAVE_DECL_KPSE_OPENTYPE_FORMAT],[1],[Define to 1 if you have a declaration for the kpse opentype format.])
+	AC_DEFINE([HAVE_DECL_KPSE_OPENTYPE_FORMAT],[1],
+	          [Define to 1 if you have a declaration for the kpse opentype format.])
     else
 	AC_CHECK_DECLS([kpse_opentype_format],[],[],[#include <kpathsea/kpathsea.h>])
     fi
@@ -465,16 +487,17 @@ using --without-kpathsea.
     dnl# does it have a separate format for encoding files?
     AC_CHECK_DECLS([kpse_enc_format],[],[],[#include <kpathsea/kpathsea.h>])
 
-    CPPFLAGS="$SAVE_CPPFLAGS"; LDFLAGS="$SAVE_LDFLAGS"
+    CPPFLAGS="${SAVE_CPPFLAGS}"; LDFLAGS="${SAVE_LDFLAGS}"
 fi
 
-AM_CONDITIONAL([have_kpathsea],[test "x$with_kpathsea" != xno])
-AC_SUBST([KPATHSEA_INCLUDES])
-AC_SUBST([KPATHSEA_LIBS])
-AC_SUBST([KPATHSEA_DEPEND])
+AM_CONDITIONAL([have_kpathsea],[test "x${with_kpathsea}" != "xno"])
+AC_SUBST([KPATHSEA_INCLUDES])dnl
+AC_SUBST([KPATHSEA_LIBS])dnl
+AC_SUBST([KPATHSEA_DEPEND])dnl
 
 AC_ARG_ENABLE([selfauto-set],
-  [AS_HELP_STRING([--disable-selfauto-set],[disable setting SELFAUTO variables from kpsewhich])],
+  [AS_HELP_STRING([--disable-selfauto-set],
+                  [disable setting SELFAUTO variables from kpsewhich])],
   [],[enable_selfauto_set=yes])
 
 if test "x$enable_selfauto_set" = xyes -a "x$kpathsea" != xno; then
@@ -513,15 +536,15 @@ test "x$glyphlistdir" = xNONE -o "x$glyphlistdir" = xno \
 test "x$encdir" = xNONE -o "x$encdir" = xno \
      -o "x$encdir" = x && encdir='${pkgdatadir}'
 
-AC_SUBST([glyphlistdir])
-AC_SUBST([encdir])
+AC_SUBST([glyphlistdir])dnl
+AC_SUBST([encdir])dnl
 
 dnl#
 dnl# TeX Live build stub
 dnl#
 
-KPATHSEA_RULE=
-AC_SUBST([KPATHSEA_RULE])
+KPATHSEA_RULE=""
+AC_SUBST([KPATHSEA_RULE])dnl
 
 dnl#
 dnl# verbatim portions of the header
