--- a/mmpfb/Makefile.am
+++ b/mmpfb/Makefile.am
@@ -15,3 +15,6 @@ AM_CPPFLAGS = -I$(srcdir)/../include
 CLEANFILES = @TEMPLATE_OBJS@
 
 EXTRA_DIST = mmpfb.1
+
+distclean-local:
+	-rm -rf .deps || rmdir .deps
